...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sZ1-F8-ztG">
                                <rect key="frame" x="79.5" y="126" width="73.5" height="26"/>
                                <color key="tintColor" red="0.17797914619999999" green="1" blue="0.17748012320000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="6Ah-K1-FYC">
                                <rect key="frame" x="0.0" y="182" width="375" height="30"/>
                                <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="0.041336686640000002" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="bfV-Io-QLq">
                                <rect key="frame" x="0.0" y="232" width="375" height="30"/>
                                <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="0.041336686640000002" colorSpace="custom" customColorSpace="sRGB"/>
...
                                            <constraint firstAttribute="height" constant="40" id="ozS-XV-gqt"/>
                                        </constraints>
                                        <state key="normal" image="clear"/>
                                        <connections>
                                            <action selector="clear:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hO5-3O-5pU"/>
...
                                            <constraint firstAttribute="height" constant="40" id="FAP-AB-Zhk"/>
                                        </constraints>
                                        <state key="normal" image="brush"/>
                                        <connections>
                                            <action selector="tool:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JzL-kT-qhc"/>
...
                                            <constraint firstAttribute="width" constant="40" id="tQQ-eW-CVr"/>
                                        </constraints>
                                        <state key="normal" image="eraser"/>
                                        <connections>
                                            <action selector="erase:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WKx-Se-KJO"/>
...
                                            <constraint firstAttribute="height" constant="40" id="yk3-Om-gPb"/>
                                        </constraints>
                                        <state key="normal" image="palette"/>
                                        <connections>
                                            <action selector="palette:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ooV-Lu-atY"/>
...
                                            <constraint firstAttribute="width" constant="40" id="d3Z-6C-zD7"/>
                                        </constraints>
                                        <state key="normal" image="line"/>
                                        <connections>
                                            <action selector="lineChosen:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x44-Th-ejf"/>
...
                                            <constraint firstAttribute="width" constant="40" id="ixA-ev-qgl"/>
                                        </constraints>
                                        <state key="normal" image="round"/>
                                        <connections>
                                            <action selector="roundChosen:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AoB-i7-0h4"/>
...
                                            <constraint firstAttribute="width" constant="40" id="y20-d8-gEY"/>
                                        </constraints>
                                        <state key="normal" image="rect"/>
                                        <connections>
                                            <action selector="rectChosen:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IY1-4D-gg5"/>
...
                                            <constraint firstAttribute="width" constant="40" id="wlj-nI-pDS"/>
                                        </constraints>
                                        <state key="normal" image="hex"/>
                                        <connections>
                                            <action selector="hexChosen:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BUf-cd-lBq"/>
...
                                            <constraint firstAttribute="width" constant="40" id="eUJ-BT-haI"/>
                                        </constraints>
                                        <state key="normal" image="oct"/>
                                        <connections>
                                            <action selector="octChosen:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Kzd-V4-waw"/>
...
                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="1" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="RQ2-Po-mrf">
                                <rect key="frame" x="0.0" y="267.5" width="375" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="sizeSlider"/>
                                <connections>
                                    <action selector="brushSizeChanged:" destination="qL5-hK-usu" eventType="valueChanged" id="XkH-DC-vfj"/>
...
                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.01" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="8Lt-xk-RxU">
                                <rect key="frame" x="0.0" y="336" width="375" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="opacitySlider"/>
                                <connections>
                                    <action selector="opacityChanged:" destination="qL5-hK-usu" eventType="valueChanged" id="a4m-IE-wa3"/>
...
                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="k5Q-IZ-WSo">
                                <rect key="frame" x="62" y="433.5" width="313" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="redSlider"/>
                                <color key="minimumTrackTintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
