...
        UIGraphicsEndImageContext()
        
    }
    
    @IBAction func clear(_ sender: UIBarButtonItem) {
        
        let actionSheet = UIAlertController(title: "Are you sure?", message: "", preferredStyle: .alert)
        
        actionSheet.addAction(UIAlertAction(title: "Clear the canvas", style: .destructive, handler: { (_) in
            self.imageView.image = nil
        }))
        
        actionSheet.addAction(UIAlertAction(title: "Cancel", style: .default, handler: nil))
        
        if let popoverController = actionSheet.popoverPresentationController {
            popoverController.barButtonItem = sender
        }
        
        present(actionSheet, animated: true, completion: nil)
...
